--- a/index.html
+++ b/index.html
@@ -7,102 +7,136 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="hero">
-      <div id="image-overlay">
-        <nav id="navigationbar">
-          <div id="logo">
-            <img src="sanatiologo.png" style="opacity: 0.6" />
-            <h3>Sanatio Psychological Services</h3>
-          </div>
-          <div id="link">
-            <a id="home" href="./index.html">HOME</a>
-            <a id="services" href="#servicesection">SERVICES</a>
-            <a id="about" href="#aboutsection">ABOUT</a>
-            <div id="makeappointment-container">
-              <a id="makeappointment" href="./makeappointment.html"
+    <main>
+      <section id="hero">
+        <div id="image-overlay">
+          <header>
+            <nav id="navigationbar">
+              <div id="logo">
+                <img src="sanatiologo.png" style="opacity: 0.6" />
+                <h3>Sanatio Psychological Services</h3>
+              </div>
+              <div id="link">
+                <a id="home" href="./index.html">HOME</a>
+                <a id="services" href="#servicesection">SERVICES</a>
+                <a id="about" href="#aboutsection">ABOUT</a>
+                <div id="makeappointment-container">
+                  <a id="makeappointment" href="./makeappointment.html"
+                    >MAKE APPOINTMENT</a
+                  >
+                </div>
+              </div>
+            </nav>
+          </header>
+          <div id="text">
+            <p id="firstsentence">Discover the path</p>
+            <p id="secondsentence">to healing and self-discovery.</p>
+            <p id="tagline">
+              Sanatio Psychological Services aims deliver quality services to
+              promote healing and personal growth
+            </p>
+            <div>
+              <a class="makeappointment-below" href="./makeappointment.html"
                 >MAKE APPOINTMENT</a
               >
             </div>
           </div>
-        </nav>
-        <div id="text">
-          <p id="firstsentence">Discover the path</p>
-          <p id="secondsentence">to healing and self-discovery.</p>
-          <p id="tagline">
-            Sanatio Psychological Services aims deliver quality services to
-            promote healing and personal growth
+        </div>
+      </section>
+      <section id="welcomesection">
+        <div id="welcomeintro">
+          <h2>Say Hello to Sanatio</h2>
+          <p>
+            Emotional and psychological growth are highly valued at Sanatio
+            Psychological Services. The goal of the clinic is to restore
+            people's overall mental health by offering therapy and counseling.
           </p>
-          <div>
-            <a class="makeappointment-below" href="./makeappointment.html"
-              >MAKE APPOINTMENT</a
-            >
+        </div>
+        <div id="welcomesection-row">
+          <div class="welcomesection-card">
+            <img src="./privacy.png" alt="" />
+            <h2>Privacy</h2>
+            <p>
+              We respect your right to privacy and promise to keep all of the
+              information you provide us private.
+            </p>
+          </div>
+          <div class="welcomesection-card">
+            <img src="./skills.png" alt="" />
+            <h2>Proficiency</h2>
+            <p>
+              We respect your right to privacy and promise to keep all of the
+              information you provide us private.
+            </p>
+          </div>
+          <div class="welcomesection-card">
+            <img src="./love.png" alt="" />
+            <h2>Care</h2>
+            <p>
+              We respect your right to privacy and promise to keep all of the
+              information you provide us private.
+            </p>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="servicesection">
-      <div class="top">
-        <img src="./thinking.png" alt="" />
-        <h1>Psychological Services</h1>
-        <p>This is the services we provide based on your requirements.</p>
-      </div>
-      <div class="row">
-        <div class="card">
-          <img src="./message.png" alt="" />
-          <h3>Mental Health Consultation</h3>
-        </div>
-        <div class="card">
-          <img id="psychotherapy" src="./two.png" alt="" />
-          <h3>Psychotherapy and Counseling</h3>
-        </div>
-        <div class="card">
-          <img src="./examination.png" alt="" />
-          <h3>Pre-employment and Examination</h3>
-        </div>
-        <div class="card">
-          <img src="./documents.png" alt="" />
-          <h3>Psychological Assessment</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="card">
-          <img src="./debriefing.png" alt="" />
-          <h3>Psychological Debriefing</h3>
-        </div>
-        <div class="card">
-          <img id="psychotherapy" src="./recovery.png" alt="" />
-          <h3>Addiction Treatment</h3>
-        </div>
-        <div class="card">
-          <img src="./contract.png" alt="" />
-          <h3>Employee Assistance Program</h3>
-        </div>
-      </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="aboutsection">
-      <div id="background">
+      <section id="servicesection">
         <div class="top">
-          <h2>About Us</h2>
+          <img src="./thinking.png" alt="" />
+          <h1>Psychological Services</h1>
+          <p>This is the services we provide based on your requirements.</p>
         </div>
-        <p>
-          The clinic aims to address the growing demand for awareness,
-          understanding, and treatment of mental health difficulties in Batangas
-          and adjacent areas. It does this by reaching out to those who need
-          professional support and by fighting the stigma linked to having
-          mental health concerns. Special attention will be provided to
-          individuals, families, and groups based on their individual
-          requirements.
-        </p>
+        <div class="row">
+          <div class="card">
+            <img src="./message.png" alt="" />
+            <h3>Mental Health Consultation</h3>
+          </div>
+          <div class="card">
+            <img id="psychotherapy" src="./two.png" alt="" />
+            <h3>Psychotherapy and Counseling</h3>
+          </div>
+          <div class="card">
+            <img src="./examination.png" alt="" />
+            <h3>Pre-employment and Examination</h3>
+          </div>
+          <div class="card">
+            <img src="./documents.png" alt="" />
+            <h3>Psychological Assessment</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card">
+            <img src="./debriefing.png" alt="" />
+            <h3>Psychological Debriefing</h3>
+          </div>
+          <div class="card">
+            <img id="psychotherapy" src="./recovery.png" alt="" />
+            <h3>Addiction Treatment</h3>
+          </div>
+          <div class="card">
+            <img src="./contract.png" alt="" />
+            <h3>Employee Assistance Program</h3>
+          </div>
+        </div>
+      </section>
 
-        <a id="makeappointment-below-about" href="./makeappointment.html"
-          >MAKE APPOINTMENT</a
-        >
-      </div>
-    </section>
-
+      <!-- About Section -->
+      <section id="aboutsection">
+        <div id="background">
+          <div class="top">
+            <h2>About Us</h2>
+          </div>
+          <p>
+            With the goal of reaching out to those who need professional help
+            and to fight the stigma attached to having mental health concerns,
+            the clinic aims to address the growing need for awareness,
+            understanding, and treatment of mental health concerns in Batangas
+            and nearby areas. Individuals, families, and groups will be given
+            special attention tailored fit to their unique needs.
+          </p>
+        </div>
+      </section>
+    </main>
     <footer>
       <div id="footer-top">
         <div id="footer-left">
@@ -145,4 +179,14 @@
       </div>
     </footer>
   </body>
+  <script>
+    document.addEventListener("scroll", () => {
+      const nav = document.querySelector("nav");
+      if (window.scrollY > 0) {
+        nav.classList.add("scrolled");
+      } else {
+        nav.classList.remove("scrolled");
+      }
+    });
+  </script>
 </html>
