--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
             <img src="./skills.png" alt="" />
             <h2>Proficiency</h2>
             <p>
-              We respect your right to privacy and promise to keep all of the
-              information you provide us private.
+              Your well-being can benefit from the positive influence that your
+              psychologist can offer.
             </p>
           </div>
           <div class="welcomesection-card">
             <img src="./love.png" alt="" />
             <h2>Care</h2>
             <p>
-              We respect your right to privacy and promise to keep all of the
-              information you provide us private.
+              Your psychologist will hear about your worries without passing
+              judgment. We will stop at nothing to assist our clients feel less
+              anxious.
             </p>
           </div>
         </div>
