update service/about page

--- a/makeappointment.html
+++ b/makeappointment.html
@@ -17,8 +17,8 @@
             </div>
             <div id="link">
               <a id="home" href="./index.html">HOME</a>
-              <a id="services" href="./index.html#servicesection">SERVICES</a>
-              <a id="about" href="./index.html#aboutsection">ABOUT</a>
+              <a id="services" href="./service.html">SERVICES</a>
+              <a id="about" href="./about.html">ABOUT</a>
               <div id="makeappointment-container">
                 <a id="makeappointment" href="./makeappointment.html"
                   >MAKE APPOINTMENT</a
