--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
               </div>
               <div id="link">
                 <a id="home" href="./index.html">HOME</a>
-                <a id="services" href="#servicesection">SERVICES</a>
-                <a id="about" href="#aboutsection">ABOUT</a>
+                <a id="services" href="./service.html">SERVICES</a>
+                <a id="about" href="./about.html">ABOUT</a>
                 <div id="makeappointment-container">
                   <a id="makeappointment" href="./makeappointment.html"
                     >MAKE APPOINTMENT</a
@@ -80,61 +80,53 @@
           </div>
         </div>
       </section>
-
-      <section id="servicesection">
-        <div class="top">
-          <img src="./thinking.png" alt="" />
-          <h1>Psychological Services</h1>
-          <p>This is the services we provide based on your requirements.</p>
-        </div>
-        <div class="row">
-          <div class="card">
-            <img src="./message.png" alt="" />
-            <h3>Mental Health Consultation</h3>
-          </div>
-          <div class="card">
-            <img id="psychotherapy" src="./two.png" alt="" />
-            <h3>Psychotherapy and Counseling</h3>
-          </div>
-          <div class="card">
-            <img src="./examination.png" alt="" />
-            <h3>Pre-employment and Examination</h3>
-          </div>
-          <div class="card">
-            <img src="./documents.png" alt="" />
-            <h3>Psychological Assessment</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="card">
-            <img src="./debriefing.png" alt="" />
-            <h3>Psychological Debriefing</h3>
-          </div>
-          <div class="card">
-            <img id="psychotherapy" src="./recovery.png" alt="" />
-            <h3>Addiction Treatment</h3>
-          </div>
-          <div class="card">
-            <img src="./contract.png" alt="" />
-            <h3>Employee Assistance Program</h3>
-          </div>
-        </div>
-      </section>
-
-      <!-- About Section -->
-      <section id="aboutsection">
-        <div id="background">
-          <div class="top">
-            <h2>About Us</h2>
-          </div>
+      <!-- psychologist section -->
+      <section id="psychologistsection">
+        <div id="description">
+          \
+          <img src="./psychologisticon.png" alt="" />
+          <h2>Meet Your Psychologist</h2>
           <p>
-            With the goal of reaching out to those who need professional help
-            and to fight the stigma attached to having mental health concerns,
-            the clinic aims to address the growing need for awareness,
-            understanding, and treatment of mental health concerns in Batangas
-            and nearby areas. Individuals, families, and groups will be given
-            special attention tailored fit to their unique needs.
+            A qualified and moral mental health specialist committed to
+            assisting with a variety of mental health issues.
           </p>
+        </div>
+        <div id="border">
+          <div id="profile">
+            <div id="profilepicandlogo">
+              <img id="profilepic" src="./psychologistpic.jpg" alt="" />
+              <div id="linetopandbot">
+                <hr />
+              </div>
+            </div>
+            <h3 id="name">Andres Virrey, Msc, RPsy</h3>
+            <div id="license">
+              <p class="psychologisttext">Psychologist</p>
+              <p class="licensenumber">License No: 1001</p>
+            </div>
+          </div>
+          <div id="education">
+            <h3 id="educationhead">Education:</h3>
+            <div class="degrees">
+              <h3 class="title">
+                Doctor of Philosophy, Major in Clinical Psychology
+              </h3>
+              <p>De La Salle University Cavite</p>
+            </div>
+            <div class="degrees">
+              <h3 class="title">Master of Arts in Clinical Psychology</h3>
+              <p>De La Salle University Cavite</p>
+            </div>
+            <div class="degrees">
+              <h3 class="title">Bachelor of Art Major in Psychology</h3>
+              <p>De La Salle University Cavite</p>
+            </div>
+          </div>
+          <a
+            id="makeappointment-below-psychologist"
+            href="./makeappointment.html"
+            >MAKE APPOINTMENT</a
+          >
         </div>
       </section>
     </main>
